tests/fixtures/invalid/min_bytes_list.py
# Cannot call min() with Bytes, List[int]
x = min(b"hello", [1, 2, 3])
